@@ -94,6 +94,51 @@ function printMap($idDiv, $iniZoom, $numLevelZooms, $latCenter, $lonCenter, $bas
 							map.addLayer(baseLayer);
 							<?php
 							break;
+						
+						case 'Gmap':
+							switch ($baselayer['gmap_type']) {
+								case 'G_PHYSICAL_MAP':
+							?>
+				            //var baseLayer = new OpenLayers.Layer.Google();
+           					var gphy = new OpenLayers.Layer.Google(
+								"Google Physical",
+								{type: G_PHYSICAL_MAP}
+							);
+							map.addLayer(gphy);
+									<?php
+									break;
+								case 'G_HYBRID_MAP':
+									?>
+									alert("hibrid");
+							var ghyb = new OpenLayers.Layer.Google(
+								"Google Hybrid",
+								{type: G_HYBRID_MAP, numZoomLevels: 20}
+							);
+							map.addLayer(ghyb);
+									<?php
+									break;
+								case 'G_SATELLITE_MAP':
+									?>
+									alert("satelite");
+							var gsat = new OpenLayers.Layer.Google(
+							"Google Satellite",
+                				{type: G_SATELLITE_MAP, numZoomLevels: 22}
+            				);
+							map.addLayer(gsat);
+							<?php
+							break;
+								default:
+									?>
+									alert("default");
+									var gmap = new OpenLayers.Layer.Google(
+										"Google Streets", // the default
+										{numZoomLevels: 20}
+									);
+									map.addLayer(gmap);
+									<?php
+									break;
+							}
+
 						case 'Static_Image':
 							?>
 				            var baseLayer = new OpenLayers.Layer.Image(
